--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-Information About the Post
+<h1>Information About the Post</h1>
 <ul>
   <li> <%= author.name %></li>
   <li> <%= author.hometown %></li>
