--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
 <%= @posts.each do |post| %>
   <%= render partial: "authors/author", locals: {post_author: @post.author} %>
-  
+
   <%= post.title %>
   <%= post.content %>
 <% end %>
+git
